dark mode styling fixes

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -156,6 +156,55 @@ button {
     z-index: -2;
 }
 
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 50px;
+}
+  
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #CCC;
+    -webkit-transition: .3s;
+    transition: .3s;
+    border-radius: 34px;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #FFFFFF;
+    -webkit-transition: .3s;
+    transition: .3s;
+    border-radius: 50%;
+}
+  
+input:checked + .slider {
+    background-color: var(--accent-light);
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateY(-20px);
+    -ms-transform: translateY(-20px);
+    transform: translateY(-20px);
+}
+
 
 
 
